fix dev math try its spacing #2210

--- a/css/ccap-developmental-math.css
+++ b/css/ccap-developmental-math.css
@@ -4139,6 +4139,8 @@ div[class="note"] > .body {
   margin: 0;
   padding: 0;
   display: block;
+  margin-top: 1em;
+  margin-bottom: 1em;
 }
 .note.try::before {
   padding: 0 3px 0 30px;
